--- a/grappelli/templates/admin/base.html
+++ b/grappelli/templates/admin/base.html
@@ -110,8 +110,8 @@
 RECURSOS AGREGADOS POR MI -->
 
 <style>
-    #id_cuerpo_publicacion_tbl iframe{
-        min-height: 400px;
+    .mceIframeContainer  iframe{
+        min-height: 480px !important;
     }
 </style>
 
